syntax = "proto3";

package orders.events;

message OrderCreatedEvent {
  int32 order_id = 1;
  int32 customer_id = 2;
  double total = 3;
  string status = 4;
  string payment_method = 5;
  repeated OrderItemEvent items = 6;
  string created_at = 7;
}

message OrderItemEvent {
  int32 product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
}

message OrderStatusChangedEvent {
  int32 order_id = 1;
  int32 customer_id = 2;
  string previous_status = 3;
  string new_status = 4;
  string changed_at = 5;
}

message OrderCancelledEvent {
  int32 order_id = 1;
  int32 customer_id = 2;
  string reason = 3;
  string cancelled_at = 4;
}

message TrackingNotificationEvent {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  string service_origin = 4;
  string message = 5;
}
